welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:56: error: expected class or object definition
def faireMotif {
^PictureMono2:62: error: expected class or object definition
for (n <- 1 to 4) {
^PictureMono2:64: error: Unmatched closing brace '}' ignored here
  } 
  ^